--- a/index.html
+++ b/index.html
@@ -1,1 +1,392 @@
-# cloth-shop
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>আমার কাপড়ের দোকান</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #0c192c, #1f293a);
+            padding: 20px;
+        }
+
+        .container {
+            position: relative;
+            width: 850px;
+            height: 550px;
+            background: rgba(31, 41, 58, 0.9);
+            border: 2px solid #0ef;
+            box-shadow: 0 0 25px #0ef;
+            border-radius: 15px;
+            overflow: hidden;
+            margin: 20px;
+        }
+
+        .container .form {
+            position: absolute;
+            top: 0;
+            width: 50%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 0 40px;
+            transition: 0.6s;
+        }
+
+        .container .login-form {
+            left: 0;
+            background: rgba(31, 41, 58, 0.95);
+            z-index: 2;
+        }
+
+        .container.active .login-form {
+            left: -50%;
+            z-index: 1;
+        }
+
+        .container .signup-form {
+            right: -50%;
+            background: rgba(31, 41, 58, 0.95);
+            z-index: 1;
+        }
+
+        .container.active .signup-form {
+            right: 0;
+            z-index: 2;
+        }
+
+        .container .welcome-panel {
+            position: absolute;
+            top: 0;
+            width: 50%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 0 40px;
+            background: linear-gradient(135deg, #0ef, #0af);
+            color: #1f293a;
+            transition: 0.6s;
+            text-align: center;
+            z-index: 3;
+        }
+
+        .container .welcome-login {
+            left: 50%;
+        }
+
+        .container.active .welcome-login {
+            left: 0;
+        }
+
+        .container .welcome-signup {
+            right: 50%;
+        }
+
+        .container.active .welcome-signup {
+            right: 0;
+        }
+
+        h2 {
+            font-size: 32px;
+            color: #fff;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .welcome-panel h2 {
+            color: #1f293a;
+            font-size: 36px;
+            margin-bottom: 30px;
+        }
+
+        .welcome-panel p {
+            font-size: 16px;
+            line-height: 1.6;
+        }
+
+        .input-box {
+            position: relative;
+            margin: 20px 0;
+        }
+
+        .input-box input {
+            width: 100%;
+            height: 50px;
+            background: transparent;
+            border: 2px solid #0ef;
+            outline: none;
+            border-radius: 40px;
+            font-size: 16px;
+            color: #fff;
+            padding: 0 20px;
+            transition: 0.5s;
+        }
+
+        .input-box input:focus {
+            border-color: #fff;
+            box-shadow: 0 0 10px #0ef;
+        }
+
+        .input-box label {
+            position: absolute;
+            top: 50%;
+            left: 20px;
+            transform: translateY(-50%);
+            font-size: 16px;
+            color: #fff;
+            pointer-events: none;
+            transition: 0.5s;
+        }
+
+        .input-box input:focus ~ label,
+        .input-box input:valid ~ label {
+            top: 1px;
+            font-size: 12px;
+            background: #1f293a;
+            padding: 0 6px;
+            color: #0ef;
+        }
+
+        .btn {
+            width: 100%;
+            height: 45px;
+            background: #0ef;
+            border: none;
+            outline: none;
+            border-radius: 40px;
+            cursor: pointer;
+            font-size: 16px;
+            color: #1f293a;
+            font-weight: 600;
+            margin-top: 20px;
+            transition: 0.3s;
+            box-shadow: 0 0 10px rgba(0, 238, 255, 0.5);
+        }
+
+        .btn:hover {
+            box-shadow: 0 0 15px #0ef;
+            transform: translateY(-2px);
+        }
+
+        .account-link {
+            font-size: 14px;
+            color: #fff;
+            text-align: center;
+            margin: 25px 0;
+        }
+
+        .account-link a {
+            color: #0ef;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        .account-link a:hover {
+            text-decoration: underline;
+        }
+
+        .admin-panel {
+            display: none;
+            width: 95%;
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background: rgba(31, 41, 58, 0.95);
+            border: 2px solid #0ef;
+            box-shadow: 0 0 25px #0ef;
+            border-radius: 15px;
+            color: #fff;
+        }
+
+        .admin-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 30px;
+            padding-bottom: 15px;
+            border-bottom: 1px solid #0ef;
+        }
+
+        .admin-title {
+            font-size: 28px;
+            color: #0ef;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .admin-title i {
+            font-size: 32px;
+        }
+
+        .user-info {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .user-avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: #0ef;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #1f293a;
+            font-weight: bold;
+        }
+
+        .logout-btn {
+            padding: 10px 20px;
+            background: #0ef;
+            border: none;
+            border-radius: 5px;
+            color: #1f293a;
+            cursor: pointer;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: 0.3s;
+        }
+
+        .logout-btn:hover {
+            box-shadow: 0 0 10px #0ef;
+        }
+
+        .admin-content {
+            display: grid;
+            grid-template-columns: 1fr 2fr;
+            gap: 25px;
+        }
+
+        .add-cloth-form {
+            background: rgba(14, 239, 255, 0.1);
+            padding: 25px;
+            border-radius: 10px;
+            border: 1px solid rgba(14, 239, 255, 0.3);
+        }
+
+        .form-title {
+            color: #0ef;
+            margin-bottom: 20px;
+            font-size: 22px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            color: #0ef;
+            font-weight: 500;
+        }
+
+        .form-group input, .form-group textarea, .form-group select {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #0ef;
+            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.05);
+            color: #fff;
+            font-size: 16px;
+        }
+
+        .form-group textarea {
+            resize: vertical;
+            min-height: 100px;
+        }
+
+        .cloth-list {
+            background: rgba(14, 239, 255, 0.1);
+            padding: 25px;
+            border-radius: 10px;
+            border: 1px solid rgba(14, 239, 255, 0.3);
+            max-height: 600px;
+            overflow-y: auto;
+        }
+
+        .section-title {
+            color: #0ef;
+            margin-bottom: 20px;
+            font-size: 22px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .cloth-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .cloth-card {
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
+            overflow: hidden;
+            border: 1px solid rgba(14, 239, 255, 0.3);
+            transition: 0.3s;
+        }
+
+        .cloth-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0, 238, 255, 0.3);
+        }
+
+        .cloth-image {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            border-bottom: 1px solid rgba(14, 239, 255, 0.3);
+        }
+
+        .cloth-details {
+            padding: 15px;
+        }
+
+        .cloth-name {
+            font-size: 18px;
+            margin-bottom: 8px;
+            color: #0ef;
+        }
+
+        .cloth-price {
+            font-size: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        .cloth-description {
+            font-size: 14px;
+            margin-bottom: 15px;
+            color: #ccc;
+            line-height: 1.4;
+        }
+
+        .cloth-actions {
+            display: flex;
+            gap: 10px;
+        }
+
